--- a/FNCmUtilsUI/src/main/resources/FnCmUtilsApplication.fxml
+++ b/FNCmUtilsUI/src/main/resources/FnCmUtilsApplication.fxml
@@ -4,13 +4,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="487.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.blogic.fn.utils.ui.Controller">
+<AnchorPane fx:id="fnCmUtilsRootPane" prefHeight="487.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.blogic.fn.utils.ui.Controller">
    <children>
       <SplitPane dividerPositions="0.21443298969072164" layoutX="-7.0" orientation="VERTICAL" prefHeight="487.0" prefWidth="734.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -31,10 +33,19 @@
                            </GridPane.margin></TextArea>
                         <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                            <children>
+                              <ImageView fx:id="progressImage" fitHeight="24.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true" smooth="false" visible="false">
+                                 <image>
+                                    <Image url="@wait_arrows.gif" />
+                                 </image>
+                              </ImageView>
                               <Button fx:id="runBtn" mnemonicParsing="false" onAction="#onRunBtnPressed" prefWidth="43.0" text="Run">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin></Button>
+                               <Button fx:id="stopBtn" disable="true" mnemonicParsing="false" onAction="#onStopBtnPressed" prefWidth="43.0" text="Stop">
+                                   <VBox.margin>
+                                       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                   </VBox.margin></Button>
                               <Button fx:id="clrBtn" mnemonicParsing="false" onAction="#onClrBtnPressed" text="Clear">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
